--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
     "@types/aws-lambda": "^8.10.150",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.10",
     "esbuild": "^0.25.5",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
@@ -14,5 +17,10 @@
     "aws-lambda": "^1.0.7",
     "dotenv": "^17.0.1",
     "mysql2": "^3.14.1"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   }
 }
